# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yaml  docker-postgres.yaml  docker_build.bat  otlp-collector-config.yaml  sqlx-data.json
.github/workflows/: general.yml
aws/: aws_login.bat  aws_push.bat  aws_tag_version.bat
configuration/: base.yaml  local.yaml  production.yaml
copilot/: .workspace  buildspec.yml  pipeline.yml
copilot/zero2prod-svc/: manifest.yml
copilot/zero2prod-svc/addons/: zero2prod-svc-cluster.yml
migrations/: 20211014002115_add_status_to_subscriptions.sql  20211014003208_make_status_not_null_in_subscriptions.sql.sql  20211014003524_create_subscription_tokens_table.sql  20211210224428_rename_password_column.sql  20211210231528_add_salt_to_users.sql  20220322011259_seed_user.sql
scripts/: init_db.sh  init_redis.sh  run_pg.bat  set_env.cmd  set_env.ps1  set_env.sh  set_env2.ps1  set_hc_env.ps1
scripts/migrations/: 20210915152017_create_subscriptions_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/.cargo/: config.toml
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
