[package]
name = "zero2prod"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4.0.0-beta.8"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"]}
chrono = "0.4.19"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = {version = "0.2.12", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.8"
serde_json = "1.0.68"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features=["std_rng"] }
opentelemetry = {version = "0.16.0", features=["rt-tokio", "metrics", "serialize"]}
opentelemetry-otlp = { version = "0.9.0", features = ["http-proto", "reqwest-client"] }
tokio = { version = "1.11", features = ["full"] }
url = "2.2.2"
tonic = "0.5.0"
thiserror = "1.0"
anyhow = "1"
tracing-opentelemetry = "0.15.0"
base64 = "0.13"
sha3 = "0.9"
argon2 = {version = "0.3", features = ["std"]}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]


[dev-dependencies]
actix-rt = "2.0.2"
claim = "0.5.0"
once_cell = "1.8.0"
tokio = { version = "1.11.0", features = ["rt", "macros"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1.0.68"
linkify = "0.5.0"
